Tweaked original to run on one host

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,10 +1,8 @@
 [mysql_cluster_data]
-ndb0 mysql_cluster=test
-ndb1 mysql_cluster=test
+localhost ansible_connection=local mysql_cluster=test
 
 [mysql_cluster_sql]
-ndb0 mysql_cluster=test
-ndb1 mysql_cluster=test
+localhost ansible_connection=local mysql_cluster=test
 
 [mysql_cluster_mgm]
-ndb-mgm mysql_cluster=test
+localhost ansible_connection=local mysql_cluster=test
